Fixed footer items spacing

--- a/_sass/_2-base.sass
+++ b/_sass/_2-base.sass
@@ -165,9 +165,11 @@ code
 
 	.footer-text
 		color: $white
+		margin-top: em(30px)
 
 		@media screen and (min-width: $large-screen)
 			float: right
+			margin-top: 0px
 
 		.icon-favorite
 			color: $red
